issue on iPhone with Menu small nav placement.  Trying to test by committing code so I can view on device

--- a/styles/page_styles.css
+++ b/styles/page_styles.css
@@ -242,7 +242,7 @@ b {
     .small-nav-open-icon .material-icons {
         display: inline-block;
         margin-right: 2px;
-        vertical-align: bottom;
+        vertical-align: middle;
         font-size: 30px;
     }
 
@@ -1002,7 +1002,7 @@ b {
     .small-nav-open-icon .material-icons {
         display: inline-block;
         margin-right: 2px;
-        vertical-align: bottom;
+        vertical-align: middle;
         font-size: 30px;
     }
 
